--- a/coding/NgheizitApp/app/src/main/res/values/strings.xml
+++ b/coding/NgheizitApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">WxzHub</string>
+    <string name="copyright">Copyright @ 2019 Wu Xizhe. All rights reserved</string>
 </resources>
